# distributed-inference-gateway

./: README.md  pyproject.toml
src/api/: router.py
src/core/: balancer.py
